# supervised_baselines

./: .gitignore  LICENSE  README.md  config.sh  pyproject.toml
baselinemodels/: baselinemodels.py  define_models.py  optuna_config.json  run_optuna.py
supervised_baselines/: baselines.py  define_models.py  optuna_config.py  run_optuna.py
tests/: test_baselines.py  test_define_models.py  test_optuna_config.py  test_supervised_baselines.py
