[tool.poetry]
name = "baselinemodels"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
cmake = "^3.27.7"
numpy = "^1.26.2"
pandas = "<=1.21"
scikit-learn = "^1.3.2"
optuna = "^3.4.0"
rpds-py = "^0.12.0"
neptune-client = "<1.0"
tensorflow-io-gcs-filesystem = "^0.34.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
lint = "^1.2.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
