[tool.poetry]
name = "supervised_baselines"
version = "1.0.0"
description = "Automated framework for hyperparameter tuning and logging simple supervised models."
authors = ["Judy Du <jtdu@alumni.princeton.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = ">=2.0.0"
scikit-learn = "^1.3.2"
pandas = "<=1.21"
pytest = "^8.0.2"
optuna = "^3.4.0"
neptune-optuna = "^1.2.0"
neptune-sklearn = "^2.1.2"
black = "^24.2.0"

[tool.poetry.group.dev.dependencies]
lint = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
